toList instead of collector toList